syntax = "proto3";

import "google/protobuf/timestamp.proto";
service UserService {
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc GetUserById(GetUserByIdRequest) returns (User);
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message GetUserByIdRequest {
    string id = 1;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message UpdateUserRequest {
    string id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}
